<resources>
    <string name="app_name">Inicio</string>
    <string name="director">Director</string>
    <string name="tutor">Tutor</string>
    <string name="profesor">Profesor</string>
    <string name="chofer">Chofer</string>
    <string name="usuario">Usuario</string>
    <string name="iniciar">Iniciar</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="appellidopaterno">AppellidoPaterno</string>
    <string name="apellidomaterno">ApellidoMaterno</string>
    <string name="celular">Celular</string>
    <string name="finalizar">Finalizar</string>
<string name="registrate">Registrate</string>
<string name="email">email</string>
<string name="password">Password</string>
    <string name="registrodeusuaro">RegistrodeUsuaro</string>


</resources>
