<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tonywonka.inicio.inicio">


    <LinearLayout
        android:id="@+id/Cnteiner1"
        android:layout_width="260dp"
        android:layout_height="352dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="43dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/director"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/director" />

        <Button
            android:id="@+id/tutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/tutor" />

        <Button
            android:id="@+id/profesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/profesor" />

        <Button
            android:id="@+id/chofer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/chofer" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
