<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tonywonka.inicio.IniciarSesion">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="431dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="39dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_margin="15dp"
            android:text="@string/usuario" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="15dp"
            android:text="@string/contrase_a"
            android:inputType="text" />

        <Button
            android:id="@+id/InicioSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:text="@string/iniciar" />

        <Button
            android:id="@+id/llevarRegistro"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/registrate" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
